@@ -8,9 +8,9 @@ include /usr/share/gnome-pkg-tools/1/rules/gnome-get-source.mk
 
 GNOME_MODULE = cogl
 
-DEB_DH_MAKESHLIBS_ARGS_libcogl12 += -V -- -c4
-DEB_DH_MAKESHLIBS_ARGS_libcogl-pango12 += -V -- -c4
-DEB_DH_MAKESHLIBS_ARGS_libcogl-gles2-12 += -V -- -c4
+DEB_DH_MAKESHLIBS_ARGS_libcogl15 += -V -- -c4
+DEB_DH_MAKESHLIBS_ARGS_libcogl-pango15 += -V -- -c4
+DEB_DH_MAKESHLIBS_ARGS_libcogl-gles2-15 += -V -- -c4
 
 DEB_CONFIGURE_EXTRA_FLAGS += \
 	--libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH) \
